# flowreader

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
files/: INVALID.uff
flowreader/: pyproject.toml
flowreader/flowreader/: manage.py
flowreader/flowreader/flowreader/: asgi.py  settings.py  urls.py  wsgi.py
src/: entrypoint.sh  pyproject.toml
src/core/: settings.py  urls.py  wsgi.py
src/flows/: admin.py  models.py
src/flows/logic/: reader.py
src/flows/migrations/: 0002_verbose_name_to_help_text_field.py
src/meters/: admin.py  forms.py  models.py
src/meters/logic/: reader.py  types.py
src/meters/management/commands/: import_flow_file.py
src/meters/migrations/: 0001_initial.py  0002_verbose_name_to_help_text_field.py  0003_add_reading_fields.py  0004_add_reading_field_help_text.py  0005_meterreading_meter_register.py  0006_meter_register_charfield.py
src/meters/tests/: test_logic.py  test_management.py  test_models.py  test_types.py  test_views.py
